--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "linkedlist",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
